# reconbot-portable-3d-reconstruction

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt
configs/: camera_intrinsics.yaml  project.example.yaml
dashboard/: index.html  package-lock.json  package.json
dashboard/scripts/: clean-textured-glb.mjs  convert-textured-ply.mjs  inspect-glb-spans.mjs  scale-textured-glb.mjs  serve.mjs  verify-dashboard.mjs  verify-field-dashboard.mjs
dashboard/src/: main.tsx  styles.css
deploy/: coordinator.env.example  reconbot-coordinator.service
docs/: acceleration_validation.md  codex_task_board.md  colmap_pipeline.md  evaluation_plan.md  field_test_2_report.md  hardware_runbook.md  interview_playbook.md  neural_and_mesh_pipeline.md  session_20260617_193117_report.md  session_20260617_report.md
scripts/: analyze_colmap_database.py  analyze_video_quality.py  fetch_field_video.py  install_pi_service.sh  laptop_camera_node.py  local_field_demo.py  pi_capture.py  pi_coordinator.py  reconstruction_worker.py  run_colmap_sparse.ps1
src/reconbot/: __init__.py  _optional.py  active_guidance.py  calibration.py  camera_node.py  capture.py  cli.py  coordinator.py  evaluation.py  features.py  frame_extraction.py  frame_quality.py  geometry.py  io_utils.py  mesh_crop.py  mesh_postprocess.py  metric_scale.py  neural_reconstruction.py  sfm.py  (+3 more)
tests/: test_active_guidance.py  test_field_system.py  test_frame_extraction.py  test_geometry.py  test_mesh_crop.py  test_mesh_postprocess.py  test_metric_scale.py  test_neural_reconstruction.py  test_reconstruction_worker.py
(+1 files in other folders)
